<resources>
    <string name="app_name">Disney\'s WeightLand</string>

    <!--Inscription-->
    <string name="identifiant">Identifiant</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="courriel">Addresse courriel</string>
    <string name="telephone">Numéro de téléphone</string>
    <string name="date_naissance">Date de naissance</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="valider_mot_de_passe">Confirmer le mot de passe</string>
    <string name="btn_inscrire">S\'inscrire</string>
    <string name="btn_annuler">Annuler</string>

    <!--Forfaits-->
    <string name="forfaits_titre">Les forfaits</string>
    <string name="btn_forfaits_abonner">S\'abonner au forfait</string>
    <string name="btn_forfaits_retour">Retour</string>

    <!--Consulter son forfait-->
    <string name="forfait_titre">Forfait</string>
    <string name="btn_forfait_consulter_les_forfaits">Consulter les forfaits</string>
    <string name="btn_forfait_renouveler">Renouveler le forfait</string>
    <string name="btn_forfait_retour">Retour</string>

    <!--Consulter un forfait -->
    <string name="consulter_un_forfait_titre">Forfait </string>
    <string name="btn_consulter_un_forfait_abonner">S\'abonner au forfait</string>

    <string name="titre_premiereLigne">Bienvenue à</string>
    <string name="titre_deuxiemeLigne">Disney\'s Weightland</string>
    <string name="hint_identifiant">Identifiant</string>
    <string name="hint_password">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="inscrire">S\'inscrire</string>
    <string name="mickey">Mickey Mouse</string>
    <string name="forfait">Forfaits</string>
    <string name="cours">Cours</string>
    <string name="rendezVous">Rendez-vous</string>
    <string name="plan">Plan d\'entrainement</string>
    <string name="preference">Préférences</string>
    <string name="deconnexion">Se déconnecter</string>

    <string name="titreVosRendezVous">Vos rendez-vous</string>
    <string name="prendreRendezVous">Prendre un rendez-vous</string>
    <string name="rendezvous">Rendez-vous</string>
    <string name="detail">Détails</string>
    <string name="choisirUneDate">Cliquer pour choisir une date</string>
    <string name="choisirHeure">Heure du rendez-vous :</string>
    <string name="prix">Prix :</string>
    <string name="argent">100</string>
    <string name="signe">$</string>

    <string name="retour">Retour</string>
    <string name="titre_plan">Votre plan dentrainement</string>
    <string name="plus">+</string>
    <string name="preferences">Préférences</string>
    <string name="politique">Politique de contenu</string>
    <string name="sauvegarder">Sauvegarder les changements</string>
    <string name="logo">Logo</string>
    <string name="notif">Notifications(ON/OFF)</string>
    <string name="afficher">Afficher Mickey Mouse</string>
    <string name="categorie">Catégories dexercice</string>
    <string name="exercice">Les exercices</string>
    <string name="exerciceprecis">Flexion des avant-bras</string>
    <string name="exercicesauver">Sauvegarder lexercice</string>
    <string name="flexion">Image de bicep</string>
    <string name="description">Pour accomplir cet exercice, vous devez prendre des dumbells et les soulever comme limage le suggeste.</string>
    <string name="serie">Séries</string>
    <string name="repetition">Répétitions</string>
    <string name="pause">Pause</string>
    <string name="moins">-</string>
    <string name="nbser">Nombre de séries :</string>
    <string name="nbrep">Nombre de répétitions :</string>
    <string name="nbpau">Temps de pause entre séries(min) :</string>
    <string name="quantite">0</string>
    <string name="LesCours">Les Cours</string>
    <string name="help">Aide</string>
    <string name="settings">Préférence</string>
    <string name="direction">Obtenir litineraire vers le gym</string>
    <string name="appel">Appeler le centre doperation</string>
    <string name="help">Aide</string>
    <string name="settings">Préférence</string>
    <string name="desinscrireCours">Se désinscrire</string>

    <string-array name="specialist">
        <item>Entraineur</item>
        <item>Nutritioniste</item>
        <item>Massothérapeute</item>
    </string-array>

    <string-array name="heure">
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
    </string-array>


</resources>
