<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/titrePrendreRendezVous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rendezVous"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/white">

        <Spinner
            android:id="@+id/spinnerSpecialiste"
            style="@style/Widget.AppCompat.DropDownItem.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="36sp"
        android:layout_marginTop="35dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/choisirUneDate"
            android:id="@+id/tvDate"
            android:layout_marginTop="50dp"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow android:layout_marginTop="50dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choisirHeure"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginLeft="30dp"/>

            <RelativeLayout
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:background="@color/white"
                android:layout_marginLeft="35dp">

                <Spinner
                    android:id="@+id/spinnerHeure"
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

        </TableRow>

        <TableRow android:layout_marginTop="50dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prix"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginLeft="30dp"/>

            <TextView
                android:id="@+id/tvPrix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/argent"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"/>
        </TableRow>
    </TableLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnPrendreRendezVous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prendreRendezVous"
            android:layout_marginBottom="1dp"
            android:background="@color/btn_background"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnRetourPrendreRendezVous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retour"
            android:background="@color/btn_background"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>
