<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/inscription_global_layout"
    android:weightSum="12"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:fillViewport="true">
    <LinearLayout
        android:id="@+id/insc_contenu"

        android:weightSum="10"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_identifiant"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/identifiant"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:hint="@string/identifiant"
                    android:singleLine="true"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_mot_de_passe"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/mot_de_passe"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:hint="@string/mot_de_passe"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    />
             </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_prenom"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/prenom"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:hint="@string/prenom"
                    android:singleLine="true"
                    android:inputType="textPersonName"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_nom"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/nom"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:hint="@string/nom"
                    android:singleLine="true"
                    android:inputType="textPersonName"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_date_naissance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/date_naissance"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:hint="@string/date_naissance"
                    android:singleLine="true"
                    android:inputType="date"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_telephone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/telephone"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:hint="@string/telephone"
                    android:singleLine="true"
                    android:inputType="number"
                    />
             </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_courriel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/courriel"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:hint="@string/courriel"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_valider_mot_de_passe"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/valider_mot_de_passe"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:hint="@string/valider_mot_de_passe"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    />
             </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/insc_boutons"
        android:layout_weight="2"
        android:weightSum="3"
        android:gravity="bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_inscrire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_inscrire"
            android:layout_weight="1"
            android:background="@color/btn_background"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <Space android:layout_height="5dp"
            android:layout_width="1dp"></Space>

        <Button
            android:id="@+id/btn_annuler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_annuler"
            android:layout_weight="1"
            android:background="@color/btn_background"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>