<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    tools:context=".activity.RendezVousClientActivity">

    <TextView
        android:id="@+id/titreVosRendezVous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titreVosRendezVous"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"/>
    
    <ListView
        android:id="@+id/listRendezVousClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnPrendreRendezVous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prendreRendezVous"
            android:layout_marginBottom="1dp"
            android:background="@color/btn_background"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnRetourRendezVous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retour"
            android:background="@color/btn_background"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>