<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="38dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="69dp"
                android:gravity="center"
                android:text="@string/titre_plan"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold" />
        </LinearLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:id="@+id/listView">

        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/button2"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/round_button"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="46sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_regulier"
                android:text="@string/retour"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>